# public/docs/openapi.yaml
@@ -43,6 +43,61 @@ paths:
                   code: { type: integer, example: 401 }
                   message: { type: string, example: 'Invalid credentials.' }
                 type: object
+  /api/messages/dispatch:
+    post:
+      tags:
+        - Message
+      operationId: post_api_messages_dispatch_agent_question
+      requestBody:
+        description: 'Dispatch a question to our LangChain agent'
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - query
+              properties:
+                query:
+                  type: string
+                  example: 'Where is Bucharest located on the globe'
+              type: object
+      responses:
+        '200':
+          description: 'Message dispatched successfully'
+          content:
+            application/json:
+              schema:
+                properties:
+                  status: { type: string, example: 'Message dispatched successfully' }
+                  time: { type: string, format: date-time }
+                type: object
+  /api/messages/dispatch/example:
+    post:
+      tags:
+        - Message
+      operationId: post_api_messages_dispatch_example
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - content
+              properties:
+                content:
+                  type: string
+                  example: 'Hello from the message controller. This will dispatch an ExampleMessage.'
+              type: object
+      responses:
+        '200':
+          description: 'Message dispatched successfully'
+          content:
+            application/json:
+              schema:
+                properties:
+                  status: { type: string, example: 'Message dispatched successfully' }
+                  time: { type: string, format: date-time }
+                type: object
   '/api/user/{id}':
     get:
       tags:
@@ -170,6 +225,8 @@ security:
   -
     Bearer: []
 tags:
+  -
+    name: Message
   -
     name: Users
   -
